# Simple-malloc

./: Allocator.h  CMakeLists.txt  Header.c  Header.h  MemTree.c  MemTree.h  main.c  test.c
allocator/: Allocator.c  Allocator.h
header/: Header.c  Header.h
memtree/: MemTree.c  MemTree.h
test/: test.c  test.h
